# Cricket_Stats_Management

./: .gitignore  OOP.js  README.md  index.js  pyproject.toml
config/: settings.py  urls.py
cricket-frontend/: README.md  angular.json
cricket-frontend/src/: index.html  main.ts
cricket-frontend/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
cricket-frontend/src/app/components/login/: login.html  login.ts
cricket-frontend/src/app/components/player-detail/: player-detail.html  player-detail.spec.ts  player-detail.ts
cricket-frontend/src/app/components/player-list/: player-list.html  player-list.spec.ts  player-list.ts
cricket-frontend/src/app/services/: api.spec.ts  api.ts
my_django_app/my_app/: forms.py  models.py  urls.py  views.py
my_django_app/my_app/templates/: form.html  languages.html
my_django_app/my_django_app/: asgi.py  settings.py  urls.py  wsgi.py
players/: admin.py  models.py  serializers.py  urls.py  views.py
players/migrations/: 0001_initial.py
